--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Created by https://www.toptal.com/developers/gitignore/api/go,goland
+# Edit at https://www.toptal.com/developers/gitignore?templates=go,goland
+
+*.idea/*
+
+.idea/.gitignore
+.idea/*.iml
+.idea/*.xml
+
+### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
@@ -19,7 +29,45 @@
 
 # Go workspace file
 go.work
-go.work.sum
 
-# env file
+### Go Patch ###
+/vendor/
+/Godeps/
+/docker-conf/
+
+### GoLand ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# CMake
+cmake-build-*/
+
+/docker-conf/rabbitmq
+/cmd/api/auctioneer_logs
+/docker-conf/logs
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+### GoLand Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
+
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
+
 .env
