--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 APP_GRPC_PORT=5050
+APP_METRIC_PORT=2112
 APP_API_URL="https://api.edgecomenergy.net/core/asset/3662953a-1396-4996-a1b6-99a0c5e7a5de/series"
 APP_SCHEDULE_INTERVAL_MIN=5
 DATABASE_SCRAPE_URL="http://localhost:9090"
