--- a/config.yml
+++ b/config.yml
@@ -2,8 +2,8 @@ app:
   grpc_port: 5050
   metric_port: 2112
   schedule_interval_min: 5
-  api_url: ""
+  api_url: "https://api.edgecomenergy.net/core/asset/3662953a-1396-4996-a1b6-99a0c5e7a5de/series"
 
 database:
-  scrape_url: "http://localhost:9090"
+  scrape_url: "http://prometheus:9090"
   job_name: "prometheus"
