Change docker files and add some logs

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_GRPC_PORT=5050
-APP_METRIC_PORT=2112
 APP_API_URL="https://api.edgecomenergy.net/core/asset/3662953a-1396-4996-a1b6-99a0c5e7a5de/series"
 APP_SCHEDULE_INTERVAL_MIN=5
-DATABASE_SCRAPE_URL="http://localhost:9090"
-DATABASE_JOB_NAME="prometheus"
+DATABASE_INFLUXDB_URL="http://influxdb:8086"
+DATABASE_INFLUXDB_TOKEN=""
+DATABASE_INFLUXDB_ORG="org"
+DATABASE_INFLUXDB_BUCKET="ts"
