Fix docker parameter to read from .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=admin
       - DOCKER_INFLUXDB_INIT_PASSWORD=adminadmin
-      - DOCKER_INFLUXDB_INIT_ORG=ai
-      - DOCKER_INFLUXDB_INIT_BUCKET=ts
+      - DOCKER_INFLUXDB_INIT_ORG=${DATABASE_INFLUXDB_ORG}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${DATABASE_INFLUXDB_BUCKET}
       - DOCKER_INFLUXDB_INIT_RETENTION=0
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=BdoVP09wv7D3aGS0rv3b3BuARTqsh5SaebSzv8PsJwyACiwBYY9dlDRl1ZhozQ4XJiwgGRdu9XyE1P01xVBo-g==
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${DATABASE_INFLUXDB_TOKEN}
     ports:
       - "8086:8086"
     volumes:
