Add user and pass for influxdb to .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     container_name: influxdb
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=admin
-      - DOCKER_INFLUXDB_INIT_PASSWORD=adminadmin
+      - DOCKER_INFLUXDB_INIT_USERNAME=${DATABASE_INFLUXDB_USER}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=${DATABASE_INFLUXDB_PASS}
       - DOCKER_INFLUXDB_INIT_ORG=${DATABASE_INFLUXDB_ORG}
       - DOCKER_INFLUXDB_INIT_BUCKET=${DATABASE_INFLUXDB_BUCKET}
       - DOCKER_INFLUXDB_INIT_RETENTION=0
