Add INFLUXDB.md and update README.md

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_GRPC_PORT=5050
 APP_API_URL="https://api.edgecomenergy.net/core/asset/3662953a-1396-4996-a1b6-99a0c5e7a5de/series"
 APP_SCHEDULE_INTERVAL_MIN=5
 DATABASE_INFLUXDB_URL="http://influxdb:8086"
-DATABASE_INFLUXDB_TOKEN="token"
-DATABASE_INFLUXDB_ORG="org"
-DATABASE_INFLUXDB_BUCKET="ts"
+DATABASE_INFLUXDB_TOKEN="your_token"
+DATABASE_INFLUXDB_ORG="your_org"
+DATABASE_INFLUXDB_BUCKET="your_bucket"
 DATABASE_INFLUXDB_USER="user"
-DATABASE_INFLUXDB_PASS="pass"
+DATABASE_INFLUXDB_PASS="password"
